added LAST CHANCE to order in makupaketti page

--- a/makupaketti.html
+++ b/makupaketti.html
@@ -86,19 +86,19 @@
         </div>
     </header>
 
-<!--
+
     <section class="bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Kokoamme joulukuun pakettia</h2>
+                    <h2 class="section-heading">Viimeinen mahdollisuus tilata </h2>
                     <hr class="light">
-                    <p class="text-faded">Seuraava Makupaketti toimitetaan viikolla 50. Se julkaistaan tällä sivulla marraskuun aikana!</p>
+                    <p class="text-faded">Tänään sunnuntaina on viimeinen mahdollisuus tilata Makupaketti jouluksi!</p>
                 </div>
             </div>
         </div>
     </section>
--->
+
 
 
 
