added some extra order buttons

--- a/makupaketti.html
+++ b/makupaketti.html
@@ -77,7 +77,7 @@
                 <h1 id="homeHeading">Makupaketti</h1>
                 <hr>
                 <p>Ihastu hedelmällisen Campanian rikkaaseen ruokakulttuuriin! Kokoamme eteläisen Italian täyteläisiä makuja resepteineen Makupakettiin, jonka herkut vaihtuvat aina sesongin mukaan.</p>
-                <!-- <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a> -->
+                <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa Makupaketti jouluksi</a>
                 <br>
                 <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
                     <i class="fa fa-3x fa-chevron-down white" aria-hidden="true"></i>
@@ -91,9 +91,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Viimeinen mahdollisuus tilata </h2>
+                    <h2 class="section-heading">Viimehetken mahdollisuus tilata!</h2>
                     <hr class="light">
-                    <p class="text-faded">Tänään sunnuntaina on viimeinen mahdollisuus tilata Makupaketti jouluksi!</p>
+                    <p class="text-faded">Tänään sunnuntaina on viimeinen mahdollisuus tilata Makupaketti jouluksi! Tartu tilaisuuteen nyt:</p>
+                    <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa tästä</a>
                 </div>
             </div>
         </div>
