removed all the order buttons

--- a/soppressata-di-gioi.html
+++ b/soppressata-di-gioi.html
@@ -105,13 +105,14 @@
                     </div>
                     
                 </div>
+                <!--
                 <div class="col-xs-12">
                     <hr class="primary">
                 </div>
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <p>Tämän tuotteen löydät Campanian syksy -Makupaketista.</p>
                     <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa nyt</a>
-                </div>
+                </div> -->
             </div>
         </div>
 
