--- a/makupaketti.html
+++ b/makupaketti.html
@@ -77,7 +77,7 @@
                 <h1 id="homeHeading">Makupaketti</h1>
                 <hr>
                 <p>Ihastu hedelmällisen Campanian rikkaaseen ruokakulttuuriin! Kokoamme eteläisen Italian täyteläisiä makuja resepteineen Makupakettiin, jonka herkut vaihtuvat aina sesongin mukaan.</p>
-                <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa Makupaketti jouluksi</a>
+                <!-- <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa Makupaketti jouluksi</a> -->
                 <br>
                 <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
                     <i class="fa fa-3x fa-chevron-down white" aria-hidden="true"></i>
@@ -91,10 +91,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Viimehetken mahdollisuus tilata!</h2>
+                    <h2 class="section-heading">Rakennamme talven Makupakettia</h2>
                     <hr class="light">
-                    <p class="text-faded">Tänään sunnuntaina on viimeinen mahdollisuus tilata Makupaketti jouluksi! Tartu tilaisuuteen nyt:</p>
-                    <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa tästä</a>
+                    <p class="text-faded">Haluatko tiedon heti, kun uusi Makupaketti on saatavilla?</p>
+                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity postituslistalle</a>
+                    <!-- <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa tästä</a> -->
                 </div>
             </div>
         </div>
@@ -190,10 +191,11 @@
                     <h2 class="section-heading">69 €</h2>
                     <p>Toimitettuna kotiovellesi Helsingissä</p>
                     <hr class="primary">
-                    <p>Makupaketin valikoima vaihtuu noin joka toinen kuukausi. Campanian joulu -paketti on tilattavissa 10.12. saakka ja se toimitetaan sinulle 20.12. mennessä.</p>
+                    <p>Makupaketin valikoima vaihtuu noin joka toinen kuukausi. <!--Campanian joulu -paketti on tilattavissa 10.12. saakka ja se toimitetaan sinulle 20.12. mennessä.--></p>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-                    <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
+                    <p>Rakennamme talven Makupakettia, joka julkaistaan tällä sivulla tammikuussa.</p>
+                    <!-- <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a> -->
                 </div>
             </div>
         </div>
