--- a/tilaa.html
+++ b/tilaa.html
@@ -71,16 +71,16 @@
 
     <section id="makupaketti">
         <div class="container">
+            <!--
             <div class="row">
                 <div class="text-center col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                     <h2 class="section-heading">Tilaus sisältää</h2>
                     <hr class="primary">
-                    <!--<p class="product-summary">Toimitamme Makupaketit toistaiseksi Helsinkiin.</p>-->
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 product padding-top">
-                    <!-- <h3 class="text-center">Tilaus sisältää</h3> -->
+    
                     <a href="/makupaketti" target="_blank"><h4>Campanian joulu -Makupaketti</h4></a>
                     <ul class="list-unstyled product col-xs-11 col-xs-offset-1">
                         <li>
@@ -90,10 +90,10 @@
                             <p><a href="/cervellata" target="_blank" class="black"><b>Cervellata</b>, ilmakuivattu makkara, n. 360 g <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
                         </li>
                         <li>
-                            <p><!--<a href="/colatura-di-menaica" target="_blank" class="black">--><b>Castagne del Prete</b>, paahdettuja kastanjoita, 250 g <!--<i class="fa fa-chevron-right" aria-hidden="true"></i></a>--></p>
+                            <p><b>Castagne del Prete</b>, paahdettuja kastanjoita, 250 g </p>
                         </li>
                         <li>
-                            <p><!--<a href="/colatura-di-menaica" target="_blank" class="black">--><b>Alici di Menaica sott'olio</b>, Menaican sardelleja oliiviöljyssä, 120 g <!--<i class="fa fa-chevron-right" aria-hidden="true"></i></a>--></p>
+                            <p><b>Alici di Menaica sott'olio</b>, Menaican sardelleja oliiviöljyssä, 120 g </p>
                         </li>
                         <li>
                             <p><a href="/fichi-secchi" target="_blank" class="black"><b>Fichi secchi, mandorle, limone</b>, kuivattuja viikunoita manteleilla ja sitruunalla, 200 g <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
@@ -111,17 +111,18 @@
                     <h4>Kotiinkuljetus</h4>
                     <p class="list-unstyled col-xs-11 col-xs-offset-1"><b>Helsinkiin</b> antamaasi osoitteeseen 20.12. mennessä</p>
                 </div>
+            -->
  
                 <div class="col-xs-12">
                     <hr class="primary">
                 </div>
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <!--<p>Joulukuun Makupaketti julkaistaan pian. Tilaa alla Makulian Uutiset, niin saat tiedon heti kun Makupaketti on tilattavissa!</p>
-                    -->
+                    <p>Talven Makupaketti julkaistaan pian. Tilaa alla Makulian Uutiset, niin saat tiedon heti kun Makupaketti on tilattavissa!</p>
+                    <!--
                     <h2 class="section-heading">69 €</h2>
                     <p class="product-summary">Verkkokaupassamme on käytössä PayPal. <a href="#ota-yhteytta">Ota yhteyttä</a>, mikäli haluat mieluummin laskun.</p>
                     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Siirry maksamaan</a>
-                    
+                    -->
                 </div>
             </div>
         </div>
