added link to the shop in navbar in every page and added a shop link button in index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Makulia</title>
+    <title>Makulia - Makujen Italia</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -53,6 +53,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="https://shop.makulia.fi">Kauppa</a>
+                    </li>
+                    <li>
                         <a href="/makupaketti">Makupaketti</a>
                     </li>
                     <li>
@@ -74,8 +77,9 @@
                 <h1 id="homeHeading">Makujen Italia</h1>
                 <hr>
                 <p>Yksinkertaisimmatkin ruoat vievät kielen mennessään Välimeren värikkään elämän, jyrkillä vuorilla vaeltavan karjan sekä auringon syleilemien kasvisten ansiosta. Italialaisten makujen salaisuus piilee ensiluokkaisissa puhtaissa raaka-aineissa sekä rakkaudessa ruokaan.</p>
+                <a href="https://shop.makulia.fi" class="btn btn-default btn-xl sr-button">Kauppaan</a>
                 <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
-                    <i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>
+                    <!--<i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>-->
                 </a>
             </div>
         </div>
