--- a/makupaketti-campanian-syksy.html
+++ b/makupaketti-campanian-syksy.html
@@ -54,6 +54,9 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="/">Etusivu</a>
+                    </li>¨
+                    <li>
+                        <a href="https://shop.makulia.fi">Kauppa</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#makupaketti">Makupaketti</a>
