--- a/scorzette-arancia.html
+++ b/scorzette-arancia.html
@@ -53,7 +53,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right product">
                     <li>
-                        <a href="/">Etusivu</a>
+                        <a href="https://shop.makulia.fi">Kauppa</a>
                     </li>
                     <li>
                         <a href="makupaketti">Makupaketti</a>
