--- a/tilaa.html
+++ b/tilaa.html
@@ -56,6 +56,9 @@
                         <a href="/">Etusivu</a>
                     </li>
                     <li>
+                        <a href="https://shop.makulia.fi">Kauppa</a>
+                    </li>
+                    <li>
                         <a href="makupaketti">Makupaketti</a>
                     </li>
                     <li>
