fixed the position of the shop button

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                 <h1 id="homeHeading">Makujen Italia</h1>
                 <hr>
                 <p>Yksinkertaisimmatkin ruoat vievät kielen mennessään Välimeren värikkään elämän, jyrkillä vuorilla vaeltavan karjan sekä auringon syleilemien kasvisten ansiosta. Italialaisten makujen salaisuus piilee ensiluokkaisissa puhtaissa raaka-aineissa sekä rakkaudessa ruokaan.</p>
-                <a href="https://shop.makulia.fi" class="btn btn-default btn-xl sr-button">Kauppaan</a>
-                <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
-                    <!--<i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>-->
-                </a>
+                <a href="https://shop.makulia.fi" class="btn btn-primary btn-xl sr-button">Kauppaan</a>
+                <!--<a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
+                    <i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>
+                </a>-->
             </div>
         </div>
     </header>
