added announcement that makupaketti is on a break right now

--- a/makupaketti.html
+++ b/makupaketti.html
@@ -94,10 +94,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Rakennamme talven Makupakettia</h2>
+                    <h2 class="section-heading">Makupaketti on tauolla</h2>
                     <hr class="light">
-                    <p class="text-faded">Haluatko tiedon heti, kun uusi Makupaketti on saatavilla?</p>
-                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity postituslistalle</a>
+                    <p class="text-faded">Haluan edelleen tarjota kausittaisia elämyksiä, mutta kehitän parhaillani kuljetusketjua. Tällä hetkellä tuotteita voi tilata yksitellen. Voit pyytää toivomiasi herkkuja Makulian uudistettuun verkkokauppaan. Voin sitten lisätä saatavana olevat tuotteet sinne.</p>
+                    <p class="text-faded">Terveisin, Pinja</p>
+                    <a href="https://shop.makulia.fi" target="_blank" class="btn btn-default btn-xl sr-button">Kauppaan</a>
                     <!-- <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa tästä</a> -->
                 </div>
             </div>
