--- a/vanha-index.html
+++ b/vanha-index.html
@@ -46,7 +46,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Valikko <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="/"><img class="logo" src="img/logo-onerow.svg" alt="Makulia"></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img class="logo" src="img/logo-onerow.svg" alt="Makulia"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,10 +56,10 @@
                         <a href="https://shop.makulia.fi">Kauppa</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#makupaketti">Makupaketti</a>
+                        <a href="/makupaketti">Makupaketti</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#uutiset">Uutiset</a>
+                        <a class="page-scroll" href="#salaisuus">Salaisuus</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
@@ -71,53 +71,29 @@
         <!-- /.container-fluid -->
     </nav>
 
-
-    <header class="temporary">
-        <div class="temp">
-            <img class="img-responsive" src="img/vuoripanoraama-moz.jpg">
-            <div class="container">
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-1-kg/"><img src="img/products/mozzarella-1kg.jpg" class="img-responsive" alt="Neljä mozzarellaa">
-                        <h3>Mozzarella di Bufala Campana - 1 kg</h3>
-                        <p class="text-muted">4 kpl 250 gramman mozzarelloja - 29 €</p></a>
-                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-1-kg/" class="more-link">Tilaa tai lue lisää</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-500-g/"><img src="img/products/mozzarella-500g.jpg" class="img-responsive" alt="Kaksi mozzarellaa">
-                        <h3>Mozzarella di Bufala Campana - 500 g</h3>
-                        <p class="text-muted">2 kpl 250 gramman mozzarelloja - 16,50 €</p></a>
-                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-500-g/" class="more-link">Tilaa tai lue lisää</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/"><img src="img/products/mozzarella-250g.jpg" class="img-responsive" alt="Yksi mozzarella">
-                        <h3>Mozzarella di Bufala Campana - 250 g</h3>
-                        <p class="text-muted">Yksi 250 gramman mozzarella - 8,90 €</p></a>
-                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/" class="more-link">Tilaa tai lue lisää</a>
-                    </div>
-                </div>
-                <div class="col-xs-12">
-                    <hr class="light">
-                </div>
+    <header class="home">
+        <div class="header-content">
+            <div class="header-content-inner">
+                <h1 id="homeHeading">Makujen Italia</h1>
+                <hr>
+                <p>Yksinkertaisimmatkin ruoat vievät kielen mennessään Välimeren värikkään elämän, jyrkillä vuorilla vaeltavan karjan sekä auringon syleilemien kasvisten ansiosta. Italialaisten makujen salaisuus piilee ensiluokkaisissa puhtaissa raaka-aineissa sekä rakkaudessa ruokaan.</p>
+                <a href="https://shop.makulia.fi" class="btn btn-primary btn-xl sr-button">Kauppaan</a>
+                <!--<a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
+                    <i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>
+                </a>-->
             </div>
         </div>
     </header>
 
-    <section class="bg-primary" id="uutiset">
+    <section class="bg-primary" id="makupaketti">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Makulian Uutiset</h2>
+                    <h2 class="section-heading">Huolella valikoidut laatuherkut kotiisi</h2>
                     <hr class="light">
-                    <p class="text-faded">Saat herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tuotteista, joita on saatavilla rajoitetusti.</p>
-                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity</a>
+                    <p class="text-faded">Matkatessamme ympäri eteläistä Italiaa ihastuimme aurinkoisen Campanian makuihin ja elämään. Mahdottoman punaiset tomaatit ja tajunnanräjäyttävät appelsiinit kasvavat runsaina Vesuviuksen hedelmällisessä ympäristössä, kun taas laiduntavat puhvelit jakavat Campanian tasangot muinaisten temppelien kanssa.</p>
+                    <p class="text-faded">Kokoamme sesongin parhaat tuotteet herkullisine resepteineen Makupakettiin, jonka toimitamme suoraan kotiovellesi.</p>
+                    <a href="/makupaketti" target="_blank" class="btn btn-default btn-xl sr-button">Makupaketti</a>
                 </div>
             </div>
         </div>
@@ -156,7 +132,22 @@
                     </div>
                 </div>
                 </div>
-            </div>   
+            </div>
+
+            
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+
+                    <hr class="primary">
+
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Lisää vinkkejä</a>
+                </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -256,7 +247,6 @@
             </div>
         </div>
     </section>
--->
 <!--
     <aside class="bg-dark">
         <div class="container text-center">
@@ -292,7 +282,12 @@
         <div class="footer">
             <div class="container">
                 <div class="text-center">
-                    <p>Copyright <img class="logo" src="img/logo-onerow.svg" alt="Makulia"> 2018</p>
+                    <p>Copyright <img class="logo" src="img/logo-onerow.svg" alt="Makulia"> 2017</p>
+                </div>
+                <div class="text-center">
+                    <p class="text-muted small">
+                    <a href="http://www.freepik.com" class="text-muted">Header photo by Valeria_Aksakova, Freepik / Garlic icon by Frimufilms, Freepik / Other hand-drawn icons by Freepik</a>
+                    </p>
                 </div>
             </div>
         </div>
