changed the colour of cookie banner

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     window.cookieconsent.initialise({
       "palette": {
         "popup": {
-          "background": "#000"
+          "background": "#696969"
         },
         "button": {
-          "background": "#f1d600"
+          "background": "#D3D3D3"
         }
       }
     })});
