modified the link of makupaketti in navbar

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <a href="https://shop.makulia.fi">Kauppa</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#makupaketti">Makupaketti</a>
+                        <a href="/makupaketti">Makupaketti</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#uutiset">Uutiset</a>
