--- a/index.html
+++ b/index.html
@@ -130,6 +130,25 @@
                         <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/" class="more-link">Tilaa tai lue lisää</a>
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-affumicata-500-g/"><img src="img/products/provola-500g.jpg" class="img-responsive" alt="Kaksi mozzarellaa">
+                        <h3>Mozzarella di Bufala Campana - 500 g</h3>
+                        <p class="text-muted">2 kpl 250 gramman savumozzarelloja - 16,50 €</p></a>
+                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-500-g/" class="more-link">Tilaa tai lue lisää</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-affumicata-250-g/"><img src="img/products/provola-250g.jpg" class="img-responsive" alt="Yksi savumozzarella">
+                        <h3>Savustettu Mozzarella di Bufala Campana - 250 g</h3>
+                        <p class="text-muted">Yksi 250 gramman savumozzarella - 8,90 €</p></a>
+                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/" class="more-link">Tilaa tai lue lisää</a>
+                    </div>
+                </div>
+
                 <div class="col-xs-12">
                     <hr class="light">
                 </div>
@@ -302,7 +321,7 @@
                     <hr class="primary">
                     <p>Makulia myy ja tuo maahan valikoituja ensiluokkaisia italialaisia elintarvikkeita. Tuotteet valitaan yksitellen ihmisen kokoisilta tuottajilta eteläisestä Italiasta. Valmistajat ovat perheyrityksiä tai pienehköjä firmoja, joiden tuotteilla on juuret syvällä paikallisissa perinteissä.</p>
                     <p>Heräsikö kysyttävää? Kiinnostuitteko Makupaketista? Kysymyksiin ja tiedusteluihin vastaa Pinja, Makulian perustaja, joka haluaa tarjota erityislaatuisia herkkuja ulottuvillenne.</p>
-                    <p><a href="javascript:void(Tawk_API.toggle())">Chattaa meille tästä</a> tai soita +358 44 3053067</p>
+                    <p><a href="javascript:void(Tawk_API.toggle())">Chattaa Pinjalle tästä</a> tai soita +358 44 3053067</p>
                 </div>
                 <!--
                 <div class="col-lg-4 col-lg-offset-2 text-center">
