added 1 kg provola

--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
                     </div>
                 </div>
 
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-affumicata-1kg/"><img src="img/products/provola-1kg.jpg" class="img-responsive" alt="Yksi savumozzarella">
+                        <h3>Savustettu Mozzarella di Bufala Campana - 1 kg</h3>
+                        <p class="text-muted">4 kpl 250 gramman savumozzarelloja - 31 €</p></a>
+                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/" class="more-link">Tilaa tai lue lisää</a>
+                    </div>
+                </div>
+
                 <div class="col-xs-12">
                     <hr class="light">
                 </div>
