--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <header class="temporary">
         <div class="temp">
             <img class="img-responsive hidden-xs" src="img/vuoripanoraama-moz.jpg">
-            <img class="img-responsive visible-xs-block" src="img/vuoripanoraama-moz-mobile.jpg">
+            <img class="img-responsive visible-xs-block" src="img/ilmapallo-kukat.jpg">
             <div class="container">
 
                 <div class="col-lg-4 col-md-6 text-center">
