changed header photo

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <header class="temporary">
         <div class="temp">
-            <img class="img-responsive hidden-xs" src="img/vuoripanoraama-moz.jpg">
+            <img class="img-responsive hidden-xs" src="img/ilmapallo-kukkapuu-panoraama.jpg">
             <img class="img-responsive visible-xs-block" src="img/ilmapallo-kukat.jpg">
             <div class="container">
 
