--- a/index.html
+++ b/index.html
@@ -130,35 +130,8 @@
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-1-kg/"><img src="img/products/mozzarella-1kg.jpg" class="img-responsive" alt="Neljä mozzarellaa">
-                        <h3>Mozzarella di Bufala Campana - 1 kg</h3>
-                        <p class="text-muted">4 kpl 250 gramman mozzarelloja - 29 €</p></a>
-                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-1-kg/" class="more-link">Tilaa tai lue lisää</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-500-g/"><img src="img/products/mozzarella-500g.jpg" class="img-responsive" alt="Kaksi mozzarellaa">
-                        <h3>Mozzarella di Bufala Campana - 500 g</h3>
-                        <p class="text-muted">2 kpl 250 gramman mozzarelloja - 16,50 €</p></a>
-                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-500-g/" class="more-link">Tilaa tai lue lisää</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/"><img src="img/products/mozzarella-250g.jpg" class="img-responsive" alt="Yksi mozzarella">
-                        <h3>Mozzarella di Bufala Campana - 250 g</h3>
-                        <p class="text-muted">Yksi 250 gramman mozzarella - 8,90 €</p></a>
-                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/" class="more-link">Tilaa tai lue lisää</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
                         <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-affumicata-500-g/"><img src="img/products/provola-500g.jpg" class="img-responsive" alt="Kaksi mozzarellaa">
-                        <h3>Savustettu Mozzarella di Bufala Campana - 500 g</h3>
+                        <h3>Savustettu Mozzarella di Bufala<br>500 g</h3>
                         <p class="text-muted">2 kpl 250 gramman savumozzarelloja - 17,50 €</p></a>
                         <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-500-g/" class="more-link">Tilaa tai lue lisää</a>
                     </div>
@@ -166,17 +139,61 @@
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-affumicata-250-g/"><img src="img/products/provola-250g.jpg" class="img-responsive" alt="Yksi savumozzarella">
-                        <h3>Savustettu Mozzarella di Bufala Campana - 250 g</h3>
-                        <p class="text-muted">Yksi 250 gramman savumozzarella - 9,50 €</p></a>
+                        <a class="no-hover" href="https://shop.makulia.fi/shop/ricotta/"><img src="img/products/ricotta.jpg" class="img-responsive" alt="Ricotta-juusto">
+                        <h3>Tuore Ricotta di Bufala<br>350 g</h3>
+                        <p class="text-muted">350 gramman ricotta-kiekko puhvelinmaidosta - 7,90 €</p></a>
+                        <a href="https://shop.makulia.fi/shop/ricotta/" class="more-link">Tilaa tai lue lisää</a>
+                    </div>
+                </div>
+
+                <div class="clearfix visible-md"></div>
+
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-1-kg/"><img src="img/products/mozzarella-1kg.jpg" class="img-responsive" alt="Neljä mozzarellaa">
+                        <h3>Mozzarella di Bufala Campana<br>1 kg</h3>
+                        <p class="text-muted">4 kpl 250 gramman mozzarelloja - 29 €</p></a>
+                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-1-kg/" class="more-link">Tilaa tai lue lisää</a>
+                    </div>
+                </div>
+
+                <div class="clearfix hidden-md"></div>
+
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/"><img src="img/products/mozzarella-250g.jpg" class="img-responsive" alt="Yksi mozzarella">
+                        <h3>Mozzarella di Bufala Campana<br>250 g</h3>
+                        <p class="text-muted">Yksi 250 gramman mozzarella - 8,90 €</p></a>
                         <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/" class="more-link">Tilaa tai lue lisää</a>
+                    </div>
+                </div>
+
+                <div class="clearfix visible-md"></div>
+
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-500-g/"><img src="img/products/mozzarella-500g.jpg" class="img-responsive" alt="Kaksi mozzarellaa">
+                        <h3>Mozzarella di Bufala Campana<br>500 g</h3>
+                        <p class="text-muted">2 kpl 250 gramman mozzarelloja - 16,50 €</p></a>
+                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-500-g/" class="more-link">Tilaa tai lue lisää</a>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
+                        <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-affumicata-250-g/"><img src="img/products/provola-250g.jpg" class="img-responsive" alt="Yksi savumozzarella">
+                        <h3>Savustettu Mozzarella di Bufala<br>250 g</h3>
+                        <p class="text-muted">Yksi 250 gramman savumozzarella - 9,50 €</p></a>
+                        <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/" class="more-link">Tilaa tai lue lisää</a>
+                    </div>
+                </div>
+
+                <div class="clearfix visible-md"></div>
+
+                <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 text-center">
+                    <div class="service-box">
                         <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-affumicata-1kg/"><img src="img/products/provola-1kg.jpg" class="img-responsive" alt="Yksi savumozzarella">
-                        <h3>Savustettu Mozzarella di Bufala Campana - 1 kg</h3>
+                        <h3>Savustettu Mozzarella di Bufala<br>1 kg</h3>
                         <p class="text-muted">4 kpl 250 gramman savumozzarelloja - 31 €</p></a>
                         <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-250-g/" class="more-link">Tilaa tai lue lisää</a>
                     </div>
@@ -195,7 +212,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Makulian Uutiset</h2>
                     <hr class="light">
-                    <p class="text-faded">Saat herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tuotteista, joita on saatavilla rajoitetusti.</p>
+                    <p class="text-faded">Saat muistutuksen tulevista toimituspäivistä, herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tuotteista, joita on saatavilla rajoitetusti.</p>
                     <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity</a>
                 </div>
             </div>
@@ -352,8 +369,8 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Ota yhteyttä</h2>
                     <hr class="primary">
-                    <p>Makulia myy ja tuo maahan valikoituja ensiluokkaisia italialaisia elintarvikkeita. Tuotteet valitaan yksitellen ihmisen kokoisilta tuottajilta eteläisestä Italiasta. Valmistajat ovat perheyrityksiä tai pienehköjä firmoja, joiden tuotteilla on juuret syvällä paikallisissa perinteissä.</p>
-                    <p>Heräsikö kysyttävää? Kiinnostuitteko Makupaketista? Kysymyksiin ja tiedusteluihin vastaa Pinja, Makulian perustaja, joka haluaa tarjota erityislaatuisia herkkuja ulottuvillenne.</p>
+                    <p>Makulia myy ja tuo maahan valikoituja ensiluokkaisia italialaisia elintarvikkeita. Tuotteet valitaan yksitellen ihmisen kokoisilta tuottajilta eteläisestä Italiasta. Valmistajat ovat perheyrityksiä tai pienehköjä firmoja, joiden tuotteilla on juuret syvällä paikallisissa perinteissä. Tällä hetkellä Makulia toimittaa erinomaista puhvelimozzarellaa sekä ricottaa Helsinkiin.</p>
+                    <p>Heräsikö kysyttävää? Tiedusteluihin vastaa Pinja, Makulian perustaja, joka haluaa tarjota erityislaatuisia herkkuja ulottuvillenne.</p>
                     <p><a href="javascript:void(Tawk_API.toggle())">Chattaa Pinjalle tästä</a> tai soita +358 44 3053067</p>
                 </div>
                 <!--
