added hidden photo for fb post

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="temp">
             <img class="img-responsive hidden-xs" src="img/ilmapallo-kukkapuu-panoraama.jpg">
             <img class="img-responsive visible-xs-block" src="img/ilmapallo-kukat.jpg">
-            <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/voikukkarella-ydin-3.jpg">
+            <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/tuuttirella.jpg">
             <div class="container">
 
                 <div class="col-lg-4 col-md-6 text-center">
