--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             <img class="img-responsive hidden-xs" src="img/ilmapallo-kukkapuu-panoraama.jpg">
             <img class="img-responsive visible-xs-block" src="img/ilmapallo-kukat.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/tuuttirella.jpg">
+            <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/mozzarellaa-pinja.jpg">
             <div class="container">
 
                 <div class="col-lg-4 col-md-6 text-center">
