changed header img on homepage

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 
     <header class="temporary">
         <div class="temp">
-            <img class="img-responsive hidden-xs" src="img/ilmapallo-kukkapuu-panoraama.jpg">
-            <img class="img-responsive visible-xs-block" src="img/ilmapallo-kukat.jpg">
+            <img class="img-responsive hidden-xs" src="img/vuori-kuumailmapallo-panoraama.jpg">
+            <img class="img-responsive visible-xs-block" src="img/vuori-kuumailmapallo-panoraama-mobile.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/tuuttirella.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/mozzarellaa-pinja.jpg">
             <div class="container">
