--- a/index.html
+++ b/index.html
@@ -123,10 +123,19 @@
 
     <header class="temporary">
         <div class="temp">
-            <img class="img-responsive hidden-xs" src="img/vuori-kuumailmapallo-panoraama.jpg">
-            <img class="img-responsive visible-xs-block" src="img/vuori-kuumailmapallo-panoraama-mobile.jpg">
+            <img class="img-responsive hidden-xs" src="img/vuori-kuumailmapallo-panoraama-toim.jpg">
+            <img class="img-responsive visible-xs-block" src="img/vuori-kuumailmapallo-panoraama-mobile-toim.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/tuuttirella.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/mozzarellaa-pinja.jpg">
+
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
+                        <h3>Tilaa 15.8. mennessä - saat lahjaksi Bufadelphiaa</h3>
+                        <p class="text-muted">Lisään kaupan päälle jokaista ostamaasi mozzarella- tai savumozzarellakiloa kohti rasian ihanaa Bufadelphia-tuorejuustoa (arvo 5,50 €/kpl)!</p>
+                        <p class="text-muted"">Tarjous on voimassa 9.-15.8.2018</p>
+                </div>
+            </div>
+
             <div class="container">
 
                 <div class="col-lg-4 col-md-6 text-center">
@@ -215,6 +224,44 @@
                     <hr class="light">
                     <p class="text-faded">Saat muistutuksen tulevista toimituspäivistä, herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tuotteista, joita on saatavilla rajoitetusti.</p>
                     <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Reseptejä</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 text-center">
+                <div class="service-box">
+                    <a class="no-hover" href="https://shop.makulia.fi/savuinen-samppanjarisotto/"><img src="img/products/provola-500g.jpg" class="img-responsive" alt="Kaksi mozzarellaa">
+                    <h3>Savuinen samppanjarisotto</h3>
+                    <p class="text-muted">Savustettu mozzarella, samppanja ja vastarouhittu mustapippuri antavat risotolle hienostuneen maun</p></a>
+                    <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-500-g/" class="more-link">Tilaa tai lue lisää</a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 text-center">
+                <div class="service-box">
+                    <a class="no-hover" href="https://shop.makulia.fi/shop/ricotta/"><img src="img/products/ricotta.jpg" class="img-responsive" alt="Ricotta-juusto">
+                    <h3>Tuore Ricotta di Bufala<br>350 g</h3>
+                    <p class="text-muted">350 gramman ricotta-kiekko puhvelinmaidosta - 7,90 €</p></a>
+                    <a href="https://shop.makulia.fi/shop/ricotta/" class="more-link">Tilaa tai lue lisää</a>
+                </div>
+            </div>
+
+            <div class="clearfix visible-md"></div>
+
+            <div class="col-lg-4 col-md-6 text-center">
+                <div class="service-box">
+                    <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-1-kg/"><img src="img/products/mozzarella-1kg.jpg" class="img-responsive" alt="Neljä mozzarellaa">
+                    <h3>Mozzarella di Bufala Campana<br>1 kg</h3>
+                    <p class="text-muted">4 kpl 250 gramman mozzarelloja - 29 €</p></a>
+                    <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-1-kg/" class="more-link">Tilaa tai lue lisää</a>
                 </div>
             </div>
         </div>
