fixed the homepage, the recipes section

--- a/index.html
+++ b/index.html
@@ -238,19 +238,19 @@
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <a class="no-hover" href="https://shop.makulia.fi/savuinen-samppanjarisotto/"><img src="img/products/provola-500g.jpg" class="img-responsive" alt="Kaksi mozzarellaa">
+                    <a class="no-hover" href="https://shop.makulia.fi/savuinen-samppanjarisotto/"><img src="img/products/savu-samppanja-pippuri-squared.jpg" class="img-responsive" alt="Kaksi mozzarellaa">
                     <h3>Savuinen samppanjarisotto</h3>
                     <p class="text-muted">Savustettu mozzarella, samppanja ja vastarouhittu mustapippuri antavat risotolle hienostuneen maun</p></a>
-                    <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-500-g/" class="more-link">Tilaa tai lue lisää</a>
+                    <a href="https://shop.makulia.fi/savuinen-samppanjarisotto/" class="more-link">Lue resepti</a>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <a class="no-hover" href="https://shop.makulia.fi/shop/ricotta/"><img src="img/products/ricotta.jpg" class="img-responsive" alt="Ricotta-juusto">
-                    <h3>Tuore Ricotta di Bufala<br>350 g</h3>
-                    <p class="text-muted">350 gramman ricotta-kiekko puhvelinmaidosta - 7,90 €</p></a>
-                    <a href="https://shop.makulia.fi/shop/ricotta/" class="more-link">Tilaa tai lue lisää</a>
+                    <a class="no-hover" href="https://shop.makulia.fi/ricotta-ravioli/"><img src="img/products/fb-square-piatto-delizioso.jpg" class="img-responsive" alt="Ricotta-juusto">
+                    <h3>Ricotta-ravioli Cilenton tomaattikastikkeella</h3>
+                    <p class="text-muted">Ravioli eli herkullisen mehevät täytetyt tuorepastatyynyt ovat lähtöisin Pohjois-Italiasta ja levinneet sittemmin koko maahan ja sulautuneet osaksi paikallista kulttuuria</p></a>
+                    <a href="https://shop.makulia.fi/ricotta-ravioli/">Lue resepti</a>
                 </div>
             </div>
 
@@ -258,10 +258,10 @@
 
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <a class="no-hover" href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-1-kg/"><img src="img/products/mozzarella-1kg.jpg" class="img-responsive" alt="Neljä mozzarellaa">
-                    <h3>Mozzarella di Bufala Campana<br>1 kg</h3>
-                    <p class="text-muted">4 kpl 250 gramman mozzarelloja - 29 €</p></a>
-                    <a href="https://shop.makulia.fi/shop/mozzarella-di-bufala-campana-1-kg/" class="more-link">Tilaa tai lue lisää</a>
+                    <a class="no-hover" href="https://shop.makulia.fi/insalata-caprese/"><img src="img/products/mozzarella-1kg.jpg" class="img-responsive" alt="Neljä mozzarellaa">
+                    <h3>Insalata Caprese<br>tomaatti-mozzarella-basilikasalaatti</h3>
+                    <p class="text-muted">Caprin saarelta peräisin oleva  salaatti on kesäherkku vailla vertaa - yksinkertainen ja raikas</p></a>
+                    <a href="https://shop.makulia.fi/insalata-caprese/" class="more-link">Lue resepti</a>
                 </div>
             </div>
         </div>
