fixed the recipes

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <a class="no-hover" href="https://shop.makulia.fi/savuinen-samppanjarisotto/"><img src="img/products/savu-samppanja-pippuri-squared.jpg" class="img-responsive" alt="Kaksi mozzarellaa">
+                    <a class="no-hover" href="https://shop.makulia.fi/savuinen-samppanjarisotto/"><img src="img/products/recipes/savu-samppanja-pippuri-squared.jpg" class="img-responsive" alt="savuinen samppanjarisotto">
                     <h3>Savuinen samppanjarisotto</h3>
                     <p class="text-muted">Savustettu mozzarella, samppanja ja vastarouhittu mustapippuri antavat risotolle hienostuneen maun</p></a>
                     <a href="https://shop.makulia.fi/savuinen-samppanjarisotto/" class="more-link">Lue resepti</a>
@@ -247,10 +247,10 @@
 
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <a class="no-hover" href="https://shop.makulia.fi/ricotta-ravioli/"><img src="img/products/fb-square-piatto-delizioso.jpg" class="img-responsive" alt="Ricotta-juusto">
+                    <a class="no-hover" href="https://shop.makulia.fi/ricotta-ravioli/"><img src="img/products/recipes/fb-square-piatto-delizioso.jpg" class="img-responsive" alt="Ricotta-ravioli">
                     <h3>Ricotta-ravioli Cilenton tomaattikastikkeella</h3>
                     <p class="text-muted">Ravioli eli herkullisen mehevät täytetyt tuorepastatyynyt ovat lähtöisin Pohjois-Italiasta ja levinneet sittemmin koko maahan ja sulautuneet osaksi paikallista kulttuuria</p></a>
-                    <a href="https://shop.makulia.fi/ricotta-ravioli/">Lue resepti</a>
+                    <a href="https://shop.makulia.fi/ricotta-ravioli/" class="more-link">Lue resepti</a>
                 </div>
             </div>
 
@@ -258,7 +258,7 @@
 
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <a class="no-hover" href="https://shop.makulia.fi/insalata-caprese/"><img src="img/products/mozzarella-1kg.jpg" class="img-responsive" alt="Neljä mozzarellaa">
+                    <a class="no-hover" href="https://shop.makulia.fi/insalata-caprese/"><img src="img/products/recipes/pinja-mozzarellaa-square.jpg" class="img-responsive" alt="Insalata caprese">
                     <h3>Insalata Caprese<br>tomaatti-mozzarella-basilikasalaatti</h3>
                     <p class="text-muted">Caprin saarelta peräisin oleva  salaatti on kesäherkku vailla vertaa - yksinkertainen ja raikas</p></a>
                     <a href="https://shop.makulia.fi/insalata-caprese/" class="more-link">Lue resepti</a>
