updated the ota yhteyttä -section and finalised the recipes

--- a/index.html
+++ b/index.html
@@ -102,13 +102,18 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="https://shop.makulia.fi">Kauppa</a>
+                        <a class="page-scroll" href="#kauppa">Kauppa</a>
                     </li>
+                    <!--
                     <li>
                         <a href="/makupaketti">Makupaketti</a>
                     </li>
+                    -->
                     <li>
                         <a class="page-scroll" href="#uutiset">Uutiset</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#reseptit">Reseptit</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
@@ -136,7 +141,7 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="container" id="kauppa">
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
@@ -228,7 +233,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="reseptit">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -241,7 +246,7 @@
                     <a class="no-hover" href="https://shop.makulia.fi/savuinen-samppanjarisotto/"><img src="img/recipes/savu-samppanja-pippuri-squared.jpg" class="img-responsive" alt="savuinen samppanjarisotto">
                     <h3>Savuinen samppanjarisotto</h3>
                     <p class="text-muted">Savustettu mozzarella, samppanja ja vastarouhittu mustapippuri antavat risotolle hienostuneen maun</p></a>
-                    <a href="https://shop.makulia.fi/savuinen-samppanjarisotto/" class="more-link">Lue resepti</a>
+                    <p><a href="https://shop.makulia.fi/savuinen-samppanjarisotto/" class="more-link">Testaa uusi makuelämys!</a></p>
                 </div>
             </div>
 
@@ -249,8 +254,8 @@
                 <div class="service-box">
                     <a class="no-hover" href="https://shop.makulia.fi/ricotta-ravioli/"><img src="img/recipes/fb-square-piatto-delizioso.jpg" class="img-responsive" alt="Ricotta-ravioli">
                     <h3>Ricotta-ravioli Cilenton tomaattikastikkeella</h3>
-                    <p class="text-muted">Ravioli eli herkullisen mehevät täytetyt tuorepastatyynyt ovat lähtöisin Pohjois-Italiasta ja levinneet sittemmin koko maahan ja sulautuneet osaksi paikallista kulttuuria</p></a>
-                    <a href="https://shop.makulia.fi/ricotta-ravioli/" class="more-link">Lue resepti</a>
+                    <p class="text-muted">Mehevät täytetyt tuorepastatyynyt ovat lähtöisin Pohjois-Italiasta ja levinneet sittemmin koko maahan ja sulautuneet osaksi paikallista kulttuuria</p></a>
+                    <p><a href="https://shop.makulia.fi/ricotta-ravioli/" class="more-link">Opi raviolin salat!</a></p>
                 </div>
             </div>
 
@@ -259,9 +264,9 @@
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
                     <a class="no-hover" href="https://shop.makulia.fi/insalata-caprese/"><img src="img/recipes/pinja-mozzarellaa-square.jpg" class="img-responsive" alt="Insalata caprese">
-                    <h3>Insalata Caprese<br>tomaatti-mozzarella-basilikasalaatti</h3>
-                    <p class="text-muted">Caprin saarelta peräisin oleva  salaatti on kesäherkku vailla vertaa - yksinkertainen ja raikas</p></a>
-                    <a href="https://shop.makulia.fi/insalata-caprese/" class="more-link">Lue resepti</a>
+                    <h3>Insalata Caprese</h3>
+                    <p class="text-muted">Caprin saarelta peräisin oleva tomaatti-mozzarella-basilikasalaatti on kesäherkku vailla vertaa - yksinkertainen ja raikas</p></a>
+                    <p><a href="https://shop.makulia.fi/insalata-caprese/" class="more-link">Kokeile ja ihastu!</a></p>
                 </div>
             </div>
         </div>
@@ -415,11 +420,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Ota yhteyttä</h2>
+                    <h2 class="section-heading">Pinja täällä hei!</h2>
                     <hr class="primary">
-                    <p>Makulia myy ja tuo maahan valikoituja ensiluokkaisia italialaisia elintarvikkeita. Tuotteet valitaan yksitellen ihmisen kokoisilta tuottajilta eteläisestä Italiasta. Valmistajat ovat perheyrityksiä tai pienehköjä firmoja, joiden tuotteilla on juuret syvällä paikallisissa perinteissä. Tällä hetkellä Makulia toimittaa erinomaista puhvelimozzarellaa sekä ricottaa Helsinkiin.</p>
-                    <p>Heräsikö kysyttävää? Tiedusteluihin vastaa Pinja, Makulian perustaja, joka haluaa tarjota erityislaatuisia herkkuja ulottuvillenne.</p>
-                    <p><a href="javascript:void(Tawk_API.toggle())">Chattaa Pinjalle tästä</a> tai soita +358 44 3053067</p>
+                    <p>Makuliasta saa ensiluokkaisia eteläitalialaisia puhvelinmaitojuustoja, kuten mozzarellaa ja ricottaa. Juustot valmistaa Campanian sydämessä perinteikäs perheyritys, jonka meijeri on ollut jo sukupolvien ajan osa paikallista historiaa.</p>
+                    <p>Yhden naisen haave saada oikein tuoretta hyvää mozzarellaa myös Suomesta johti Makulian syntyyn. Kaupoista alle viikon vanhaa mozzarellaa on käytännössä mahdotonta löytää, joten päätin alkaa tuoda juustoa itselleni ja muille herkkusuille ilman mozzarellan matkaa hidastavia välikäsiä.</p>
+                    <!--
+                    <p>Makuliasta saa ensiluokkaisia puhvelinmaitojuustoja, kuten mozzarellaa ja ricottaa. Tuotteet valitaan yksitellen ihmisen kokoisilta tuottajilta eteläisestä Italiasta. Valmistajat ovat perheyrityksiä tai pienehköjä firmoja, joiden tuotteilla on juuret syvällä paikallisissa perinteissä. Tällä hetkellä Makulia toimittaa erinomaista puhvelimozzarellaa sekä ricottaa Helsinkiin.</p> 
+                    <p>Heräsikö kysyttävää? Tiedusteluihin vastaa Pinja, Makulian perustaja, joka haluaa tarjota erityislaatuisia herkkuja ulottuvillenne.</p> -->
+                    <p><a href="javascript:void(Tawk_API.toggle())">Chattaa Makulian Pinjalle tästä</a> tai soita +358 44 3053067</p>
                 </div>
                 <!--
                 <div class="col-lg-4 col-lg-offset-2 text-center">
