added tilauksen nouto page to navbar

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                         <a class="page-scroll" href="#reseptit">Reseptit</a>
                     </li>
                     <li>
+                        <a href="https://shop.makulia.fi/noutopiste/">Tilauksen nouto</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
                     </li>
                 </ul>
