changed img of caprese recipe

--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
 
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <a class="no-hover" href="https://shop.makulia.fi/insalata-caprese/"><img src="img/recipes/pinja-mozzarellaa-square.jpg" class="img-responsive" alt="Insalata caprese">
+                    <a class="no-hover" href="https://shop.makulia.fi/insalata-caprese/"><img src="img/recipes/pinja-caprese-square.jpg" class="img-responsive" alt="Insalata caprese">
                     <h3>Insalata Caprese</h3>
-                    <p class="text-muted">Caprin saarelta peräisin oleva tomaatti-mozzarella-basilikasalaatti on kesäherkku vailla vertaa - yksinkertainen ja raikas</p></a>
+                    <p class="text-muted">Caprin saarelta peräisin oleva tomaatti-mozzarella-basilikasalaatti on herkku vailla vertaa - yksinkertainen ja raikas</p></a>
                     <p><a href="https://shop.makulia.fi/insalata-caprese/" class="more-link">Kokeile ja ihastu!</a></p>
                 </div>
             </div>
