added 2 recipes to recipe section

--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <a class="no-hover" href="https://shop.makulia.fi/savuinen-samppanjarisotto/"><img src="img/recipes/savu-samppanja-pippuri-squared.jpg" class="img-responsive" alt="savuinen samppanjarisotto">
-                    <h3>Savuinen samppanjarisotto</h3>
-                    <p class="text-muted">Savustettu mozzarella, samppanja ja vastarouhittu mustapippuri antavat risotolle hienostuneen maun</p></a>
-                    <p><a href="https://shop.makulia.fi/savuinen-samppanjarisotto/" class="more-link">Testaa uusi makuelämys!</a></p>
+                    <a class="no-hover" href="https://shop.makulia.fi/paahdettu-munakoiso-tuoretta-mozzarellaa/"><img src="img/recipes/pinja-melanzane-square.jpg" class="img-responsive" alt="Paahdettua munakoisoa ja tuoretta mozzarellaa">
+                    <h3>Paahdetut munakoisot</h3>
+                    <p class="text-muted">Helpot mausteiset munakoisoviipaleet tarjoavat suussasulavan herkullisen makuparin mozzarellalle</p></a>
+                    <p><a href="https://shop.makulia.fi/paahdettu-munakoiso-tuoretta-mozzarellaa/" class="more-link">Kurkkaa resepti!</a></p>
                 </div>
             </div>
 
@@ -273,6 +273,29 @@
                     <p><a href="https://shop.makulia.fi/insalata-caprese/" class="more-link">Kokeile ja ihastu!</a></p>
                 </div>
             </div>
+
+            <div class="clearfix hidden-md"></div>
+
+            <div class="col-lg-4 col-md-6 text-center">
+                <div class="service-box">
+                    <a class="no-hover" href="https://shop.makulia.fi/savuinen-samppanjarisotto/"><img src="img/recipes/savu-samppanja-pippuri-squared.jpg" class="img-responsive" alt="savuinen samppanjarisotto">
+                    <h3>Savuinen samppanjarisotto</h3>
+                    <p class="text-muted">Savustettu mozzarella, samppanja ja vastarouhittu mustapippuri antavat risotolle hienostuneen maun</p></a>
+                    <p><a href="https://shop.makulia.fi/savuinen-samppanjarisotto/" class="more-link">Testaa uusi makuelämys!</a></p>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 text-center">
+                <div class="service-box">
+                    <a class="no-hover" href="https://shop.makulia.fi/ricotta-lakka-sitruuna-muurinpohjaletut/"><img src="img/recipes/pinja-mm-lettu-ricotta.jpg" class="img-responsive" alt="Muurikkaletut ja ricotta-täyte">
+                    <h3>Muurinpohjaletut & ihana ricotta-täyte</h3>
+                    <p class="text-muted">Tuore ricotta sekä lakkahillo yhdistyvät lettuun käärittynä pieneksi palaseksi makutaivasta, jonka kruunaa sitruunankuoren sähäkkyys</p></a>
+                    <p><a href="https://shop.makulia.fi/ricotta-lakka-sitruuna-muurinpohjaletut/" class="more-link">Valmistaudu lettukesteihin!</a></p>
+                </div>
+            </div>
+
+            <div class="clearfix visible-md"></div>
+
         </div>
     </section>
 
