added shopping cart link, hided early bird offer and page scroll link for contacts

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                         <a href="https://shop.makulia.fi/noutopiste/">Tilauksen nouto</a>
                     </li>
                     <li>
+                        <a href="https://shop.makulia.fi/cart/">Ostoskori</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
                     </li>
                 </ul>
@@ -136,7 +139,7 @@
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/tuuttirella.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/mozzarellaa-pinja.jpg">
 
-
+<!--
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                         <h3>Tilaa 9.9. mennessä - saat lahjaksi puhvelinmaitojogurttia</h3>
@@ -144,7 +147,7 @@
                         <p class="text-muted">Tarjous on voimassa 2.-9.9.2018</p>
                 </div>
             </div>
-
+-->
             <div class="container" id="kauppa">
 
                 <div class="col-lg-4 col-md-6 text-center">
