--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       gtag('config', 'AW-812930791');
     </script>
 
+    <!-- Smartlook -->
     <script type="text/javascript">
     window.smartlook||(function(d) {
     var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
